# robotics

./: CMakeLists.txt  package.xml
data/: assignment3Input.txt  robot_3_config.txt
include/assignment2/: patricki.h  studentid.h
include/assignment3/: lynxmotionUtilities.h  patricki.h
src/: lynxmotionUtilities.cpp  patrickiApplication.cpp  patrickiImplementation.cpp  studentidApplication.cpp  studentidImplementation.cpp
